cmake_minimum_required(VERSION 3.27)
project(src)
set(HEAD_PATH ${PROJECT_SOURCE_DIR}/common/public)
set(HEAD_PLANT_PATH ${PROJECT_SOURCE_DIR}/plant/public)
set(HEAD_ZOMBIE_PATH ${PROJECT_SOURCE_DIR}/zombie/public)
set(HEAD_SCENE_PATH ${PROJECT_SOURCE_DIR}/scene/public)
add_subdirectory(app)
add_subdirectory(common)
add_subdirectory(scene)
add_subdirectory(plant)
#add_subdirectory(zombie)