cmake_minimum_required(VERSION 3.27)
project(scene)
include_directories(${HEAD_PATH})
include_directories(${HEAD_PLANT_PATH})
include_directories(${HEAD_SCENE_PATH})
include_directories(${HEAD_ZOMBIE_PATH})
aux_source_directory(./private SRC)
link_libraries(plant)
link_libraries(zombie)
add_library(scene STATIC ${SRC})